--- a/css/common.css
+++ b/css/common.css
@@ -1831,7 +1831,7 @@ strong {
 .b-arrow:before{
 	content: '';
 	position: absolute;
-	left: calc(50% - 5px);
+	left: calc(50% - 0.5rem);
 	top: 0;
 	height: 1.5rem;
 	border-left: 0.2rem solid red;
@@ -1840,7 +1840,7 @@ strong {
 .b-arrow:after{
 	content: '';
 	position: absolute;
-	left: calc(50% + 5px);
+	left: calc(50% + 0.5rem);
 	top: 0;
 	height: 1.5rem;
 	border-left: 0.2rem solid red;
