예방접종수첩 디바이스 이미지 적용

--- a/css/common.css
+++ b/css/common.css
@@ -346,6 +346,9 @@ strong {
 	font-weight: inherit;
 	color: #056bff;
 }
+.section-04 .mockup-box {
+	background-image:url(../img/img-mockup-shadow02.svg);
+}
 .visual-wrap .img-box {
 	display: block;
 	position: relative;
