SNS 연동화면 관련 이미지 및 css 추가

--- a/css/common.css
+++ b/css/common.css
@@ -1988,7 +1988,9 @@ strong {
 	position:absolute;
 	top:0;
 	right:0;
+	display:block;
 	width:8rem;
+	height:4.9rem;
 	background-color:#ebeff3;
 	line-height:4.9rem;
 	border-left:1px solid #ebeff3;
