--- a/css/common.css
+++ b/css/common.css
@@ -2193,16 +2193,23 @@ strong {
 	border-radius:2rem;
 }
 
+.srch-box {
+	padding:2rem; 
+}
+.srch-box + .board-cont  {
+	padding-top:0;
+}
 .board-cont {
 	padding:2rem 2rem 4rem;
 	overflow-y:auto;
 	height:100%;
 }
+
 .input-text > input{
 	display: block;
 	width: 100%;
 	height: 5rem;
-	padding: 0 1.5rem;
+	padding: 0 1.8rem;
 	font-size:1.4rem;
 	border: 1px solid #dbdee5;
 	border-radius:1rem;
@@ -2365,7 +2372,7 @@ strong {
 	position:absolute;
 	top:1.8rem;
 	left:2rem;
-	z-index:200;
+	z-index:180;
 }
 
 #board-wrap .popup-close a {
@@ -2428,7 +2435,7 @@ strong {
 
 .view-content {
 	padding:4rem 0 5rem;
-	font-size:1.6rem
+	font-size:1.6rem;
 	border-top: 1px solid #ebeff3;
 }
 
@@ -2557,7 +2564,7 @@ strong {
 	-webkit-box-sizing:border-box;
 			box-sizing:border-box;
 	min-height:10rem;
-	padding:2rem 2rem 7rem;
+	padding:1.8rem 1.8rem 6.8rem;
 	background-color:#FFF;
 	border:1px solid #dbdee5;
 	border-radius:0.7rem;
@@ -2622,11 +2629,13 @@ strong {
 	height:2.4rem;
 	margin-top:-1.2rem;
 	background: url('../img/ic-detail-like-nor.svg') no-repeat left center;
+	-webkit-transition-duration: 0.8s;
+			transition-duration: 0.8s;
 }
 .share-area .cmt-heart.on:before {
 	background-image:url('../img/ic-detail-like-sel.svg');
-	-webkit-transition-duration: 0.6s;
-			transition-duration: 0.6s;
+	-webkit-transition-duration: 0.8s;
+			transition-duration: 0.8s;
 }
 .share-area .cmt-heart em {
 	font-size:1.4rem;
@@ -2682,7 +2691,7 @@ strong {
 	content: '';
 	position: absolute;
 	top: 1.7rem;
-	left: 1.8rem;
+	left: 0.8rem;
 	width: 1rem;
 	border-bottom: 1px solid #000;
 	opacity: 0.6;
