--- a/css/common.css
+++ b/css/common.css
@@ -2168,10 +2168,21 @@ strong {
 }
 #board-wrap .inner {
 	display:flex;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	flex-flow:column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+		-ms-flex-direction: column;
+			flex-direction: column;
+	-ms-flex: 1 1 auto;
+    -webkit-flex: 1 1 auto;
+    flex: 1 1 auto;
 	height:100%;
+	/*padding-bottom:2.2rem;*/
 	box-sizing:border-box;
-	padding-bottom:2.2rem;
 }
 
 .board-head {
@@ -2210,19 +2221,29 @@ strong {
 }
 .board-cont {
 	position:relative;
-	padding:2rem;
+	padding:2rem 2rem 0;
 	overflow-y:auto;
 	height:100%;
+	display:block;
+	box-sizing: border-box;
+}
+.board-cont::after {
+    content: '';
+    display: block;
+    padding-bottom:2rem;
 }
 
 .input-text > input{
 	display: block;
 	width: 100%;
 	height: 4.5rem;
-	padding: 0 1.8rem;
+	padding: 0.9rem 1.8rem 1rem;
 	font-size:1.4rem;
 	border: 1px solid #dbdee5;
 	border-radius:1rem;
+}
+.input-text > input::placeholder{
+	line-height: 4.5rem;
 }
 .input-text.search > input{
 	padding-right: 5rem;
@@ -2366,7 +2387,7 @@ strong {
 	display:flex;
 	justify-content:center;
 	/*margin:0 2rem;*/
-	padding-top:2rem;
+	padding:2rem 0 2.2rem;
 	border-top:1px solid #ebeff3;
 }
 #board-wrap .btn-area .btn {
@@ -2670,7 +2691,7 @@ strong {
 
 /* pager */
 .pager{
-	margin-top:3rem;
+	margin:3rem 0 2.2rem;
 	font-size: 0;
 	text-align:center;
 }
